<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/rel_ativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/color_icon" >

        <TextView
            android:id="@+id/free_yuyue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/decorate_detail_freeyuyue"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/free_yuyue_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/descr_image"
            android:padding="5dp"
            android:src="@drawable/back_up" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rel_ativeLayout1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/descr_image"
        android:scaleType="fitXY"
        android:src="@drawable/img_service" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageView1"
        android:background="@color/dividing_line_bg"
        android:contentDescription="@string/descr_image" />

    <RelativeLayout
        android:id="@+id/rel_ativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/free_yuyue_district"
            android:textColor="@color/color_darkgray" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rel_ativeLayout2"
        android:background="@color/dividing_line_bg"
        android:contentDescription="@string/descr_image" />

    <RelativeLayout
        android:id="@+id/rel_ativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView3"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/free_yuyue_area"
            android:textColor="@color/color_darkgray" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_area"
            android:layout_alignBottom="@+id/tv_area"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/free_yuyue_unit" />

        <EditText
            android:id="@+id/free_yuyue_input_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/free_yuyue_input_area"
            android:inputType="number"
            android:textSize="14sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_area"
            android:layout_toEndOf="@+id/tv_area">

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rel_ativeLayout3"
        android:background="@color/dividing_line_bg"
        android:contentDescription="@string/descr_image" />

    <RelativeLayout
        android:id="@+id/rel_ativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView4" >

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/free_yuyue_budget"
            android:textColor="@color/color_darkgray" />

        <EditText
            android:id="@+id/free_yuyue_budget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_budget"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="请输入您的预算金额！"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="万元" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rel_ativeLayout4"
        android:background="@color/dividing_line_bg"
        android:contentDescription="@string/descr_image" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView5"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/free_yuyue_phone"
                android:textColor="@color/color_darkgray" />

            <EditText
                android:id="@+id/free_yuyue_inputphone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:ems="11"
                android:gravity="center_vertical"
                android:hint="@string/free_yuyue_inputphone"
                android:inputType="phone"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/free_yuyue_input_obtainphone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/verification_edittext_bg"
            android:ems="11"
            android:hint="@string/free_yuyue_input_obtainphone"
            android:inputType="phone"
            android:text="0"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dividing_line_bg" />

        <Button
            android:id="@+id/free_yuyue_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/user_login_btn_background"
            android:text="@string/free_yuyue_submit"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/freeyuyue_bottom"
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/freeyuyue_bottom" />

</RelativeLayout>