<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_icon" >

        <ImageView
            android:id="@+id/reg_one_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/back_up" />

        <TextView
            android:id="@+id/reg_one_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividing_line_bg" />

    <TextView
        android:id="@+id/reg_one_inputbundlephone_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/fast_logging_input_bundlephone"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/reg_one_inputbundlephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/verification_edittext_bg"
        android:ems="11"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/reg_one_nextstep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login"
        android:text="@string/reg_nextstep"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/reg_one_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/reg_desc"
        android:textColor="@color/color_neutralgrey" />

</LinearLayout>