<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/pop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/dialog_freedesign_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/image_detail_designforme_dialog_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialog_freedesign_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/image_detail_designforme_dialog_subtitle"
            android:textColor="#ff882e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dialog_freedesign_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="3"
                android:background="@drawable/designforme_dialog_shape"
                android:hint="@string/image_detail_designforme_dialog_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="13sp"></EditText>

            <TextView
                android:id="@+id/dialog_freedesign_submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#ff882e"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/image_detail_designforme_dialog_submit"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividing_line_bg" />
    </LinearLayout>

</RelativeLayout>