<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_icon">

        <TextView
            android:id="@+id/bundlesuccess_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/bundlesuccess_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/bundlesuccess_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            android:src="@drawable/login_back" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividing_line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bundlesuccess_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/applyfor_success" />

        <TextView
            android:id="@+id/bundlesuccess_logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/applyfor_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bundlesuccess_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/bundlesuccess_desc"
            android:textColor="@color/color_lightgray" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividing_line_bg" />

</LinearLayout>